--- a/WEBSITE/css_files/style_sheets.css
+++ b/WEBSITE/css_files/style_sheets.css
@@ -85,6 +85,11 @@ p{
     text-align: center;
 }
 
+.content{
+  max-width: 800px;
+  margin: auto;
+}
+
 @media only screen and (min-width: 600px) {
   .col-s-1 {width: 8.33%;}
   .col-s-2 {width: 16.66%;}
