--- a/WEBSITE/css_files/style_sheets.css
+++ b/WEBSITE/css_files/style_sheets.css
@@ -38,22 +38,20 @@ p{
     position: absolute;
     right: 0;
     top: 0;
+    
   }
     
-    .topnav{
-        text-align: left;
-    }
-    
+  .topnav{
+    text-align: left;    
+  }
   .topnav.responsive a {
     float: none;
     display: block;
     text-align: left;
   }
-}
-
-.topnav{
+  .topnav.responsive{
     background-color: #463E3E;
-    color:white;
+  }
 }
 
 .topnav a{
@@ -121,10 +119,10 @@ p{
 }
 
 .topnav{
-    background-color: #463E3E;
     padding: 11px;
     color:white;
-    
+    position: absolute;
+    width: 100%;
 }
 
 img {
@@ -136,6 +134,75 @@ img {
 /*----------------Earthquake Page CSS--------------*/
 
 #maplayout {
-    height: 70%;
-    width: 70%; 
+    height: 438px;
+    width: 780px; 
+}
+
+@media only screen and (max-width: 479px){
+    #mapLayout { width: 70%; 
+        height: 50%; 
+    }
+}
+
+.contentEQ{
+  padding-top: 20px;
+  padding-right: 20px;
+  max-width: 800px;
+  margin: auto;
+  float: right;
+}
+
+/*------Earthquake navigation bar(text is changed to black---------*/
+@media screen and (max-width: 600px) {
+  .topnavEQ a:not(:first-child) {display: none;}
+  .topnavEQ a.icon {
+    float: right;
+    display: block;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .topnavEQ.responsive {position: relative;}
+  .topnavEQ.responsive a.icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+    
+  }
+    
+  .topnavEQ{
+    text-align: left;    
+  }
+  .topnavEQ.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  .topnavEQ.responsive{
+    background-color: #463E3E;
+  }
+}
+
+.topnavEQ a{
+    color: black;
+    padding-top: 11px;
+    padding-right: 11px;
+    padding-left: 11px;
+    text-decoration: none;
+    transition: color 0.5s ease-in-out;
+}
+
+.topnavEQ .icon {
+    display: none;
+}
+
+.topnavEQ a:hover{
+    color: #A19595;
+}
+
+.topnavEQ{
+    padding: 11px;
+    color:black;
+    position: absolute;
+    width: 100%;
 }
