--- a/WEBSITE/css_files/style_sheets.css
+++ b/WEBSITE/css_files/style_sheets.css
@@ -235,7 +235,14 @@ input[type="text"]{
 	text-align: center;
 }
 
-h1{
-	text-align: center;
+/*----------------UV Page CSS--------------*/
+#submitUV{
+	height: 35px;
+	font-size: 16px;
+	font-weight: bold;
 }
+
+h3{
+    text-align: center;
+    
 }
