--- a/WEBSITE/css_files/style_sheets.css
+++ b/WEBSITE/css_files/style_sheets.css
@@ -249,13 +249,13 @@ input[type="text"]{
 }
 
 /*----------------UV Page CSS--------------*/
-#submitUV{
-	height: 35px;
-	font-size: 16px;
-	font-weight: bold;
-}
 
 h3{
     text-align: center;
     
+}
+
+input[type="number"]{
+	height: 40px;
+	font-size: 20px;
 }
