--- a/WEBSITE/css_files/style_sheets.css
+++ b/WEBSITE/css_files/style_sheets.css
@@ -8,15 +8,11 @@ h1 {
 }
 
 h2 {
-	float:left;
-	width: 50%;
-	display: inline-block;
+	text-align: center;
 }
 
 h3{
-	float:left;
-	width: 50%;
-	display: inline-block;
+	text-align: center;
 }
 
 html {
@@ -148,8 +144,6 @@ img.header {
 #mapLayout {
     height: 438px;
     width: 780px; 
-	float: left;
-	display: inline-block;
 }
 
 @media only screen and (max-width: 479px){
@@ -168,7 +162,7 @@ img.header {
 
 .buttonsEQ{
     float: left;
-    padding-left: 30px;
+    padding-left: 20px;
 }
 
 button{
@@ -262,6 +256,18 @@ input[type="text"]{
 	text-align: center;
 }
 
+.contentWeather{
+  padding-top: 20px;
+  padding-right: 20px;
+  max-width: 800px;
+  margin: auto;
+  float: right;
+}
+
+.infoWeather{
+    float: left;
+    padding-left: 150px;
+}
 /*----------------UV Page CSS--------------*/
 
 input[type="number"]{
