--- a/WEBSITE/css_files/style_sheets.css
+++ b/WEBSITE/css_files/style_sheets.css
@@ -79,6 +79,52 @@ p{
     color: #A19B9B;
 }
 
+/*---------------Drop down menu code---------------*/
+    
+.navbtn{
+    border: 0px;
+    padding: 0px;
+    background-color: transparent;
+    font-weight: 100;
+}
+
+.navbtn a:hover{
+    color: #A19B9B;
+}
+
+.dropdownOtions{
+  display: none;
+  position: absolute;
+  background-color: transparent;
+  min-width: 160px;
+  z-index: 1;
+}
+
+.dropdownOptions a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.dropdownOptions a:hover {
+  background-color: transparent;
+}
+
+.dropDown:hover .dropdownOptions {
+  display: block;
+}
+
+.dropDown .navbtn { 
+  border: none;
+  color: black;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+}
+
 /*----------------------------------------------*/
 
 [class*="col-"] {
