--- a/WEBSITE/css_files/style_sheets.css
+++ b/WEBSITE/css_files/style_sheets.css
@@ -15,6 +15,12 @@ h3{
 	text-align: center;
 }
 
+h4{
+	text-align: center;
+}
+
+
+
 html {
     font-family: "Calibri", sans-serif;
     font-weight: 100;
@@ -28,6 +34,7 @@ body{
 p{
     font-size: 20;
 }
+
 
 /*---------------Navigation bar-------------*/
 
@@ -50,7 +57,7 @@ p{
   }
     
   .topnav{
-    text-align: left;    
+    text-align: left;
   }
   .topnav.responsive a {
     float: none;
@@ -79,51 +86,8 @@ p{
     color: #A19B9B;
 }
 
-/*---------------Drop down menu code---------------*/
-    
-.navbtn{
-    border: 0px;
-    padding: 0px;
-    background-color: transparent;
-    font-weight: 100;
-}
 
-.navbtn a:hover{
-    color: #A19B9B;
-}
 
-.dropdownOtions{
-  display: none;
-  position: absolute;
-  background-color: transparent;
-  min-width: 160px;
-  z-index: 1;
-}
-
-.dropdownOptions a {
-  float: none;
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
-}
-
-.dropdownOptions a:hover {
-  background-color: transparent;
-}
-
-.dropDown:hover .dropdownOptions {
-  display: block;
-}
-
-.dropDown .navbtn { 
-  border: none;
-  color: black;
-  background-color: inherit;
-  font-family: inherit;
-  margin: 0;
-}
 
 /*----------------------------------------------*/
 
