--- a/WEBSITE/css_files/style_sheets.css
+++ b/WEBSITE/css_files/style_sheets.css
@@ -3,32 +3,31 @@
 }
 
 h1 {
-	font-family: Consolas;
+	font-family: 'Roboto', sans-serif;
     text-align: center;
     margin-top: auto;
 }
 
 h2 {
-	font-family: Consolas;
-	text-align: center;
+	
+	font-family: 'Roboto', sans-serif;
+	
 }
 
 h3{
-	font-family: Consolas;
-	text-align: center;
+	font-family: 'Roboto', sans-serif;
+	
 }
 
 h4{
-	font-family: Consolas;
+	font-family: 'Roboto', sans-serif;
 	text-align: center;
 }
 
 
 
 html {
-    font-family: "Calibri", sans-serif;
-    font-weight: 100;
-    background-color: #EEEEEE;
+    font-family: 'Roboto', sans-serif;
 }
 
 body{
@@ -37,8 +36,8 @@ body{
 
 p{
     font-size: 20;
+	font-family: 'Roboto', sans-serif;
 }
-
 
 /*---------------Navigation bar-------------*/
 
@@ -159,7 +158,12 @@ p{
   .col-12 {width: 100%;}
 }
 
-
+.topnav{
+    padding: 11px;
+    color:white;
+    position: absolute;
+    width: 100%;
+}
 
 img.header {
     width: 100%;
@@ -175,8 +179,14 @@ img.header {
     max-width: 85%;
     margin-left: 20px;
     margin-right: 20px;
-    position: relative;
+	position: relative;
     margin:auto;
+	padding: 2px 16px;
+	border-radius: 5px;
+	background-color: #EEEEEE;
+	box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+	border:5px solid #EEEEEE;
+}
 }
 
 @media only screen and (max-width: 600px){
@@ -217,7 +227,7 @@ button:hover{
 	transition: 0.4s;
 }
 
-/*------Black Text Nav Bar---------*/
+/*------Earthquake navigation bar(text is changed to black---------*/
 @media screen and (max-width: 600px) {
   .topnavEQ a:not(:first-child) {display: none;}
   .topnavEQ a.icon {
@@ -248,7 +258,7 @@ button:hover{
   }
 }
 
-.topnavBlack a{
+.topnavEQ a{
     color: black;
     padding-top: 11px;
     padding-right: 11px;
@@ -257,74 +267,17 @@ button:hover{
     transition: color 0.5s ease-in-out;
 }
 
-.topnavBlack .icon {
+.topnavEQ .icon {
     display: none;
 }
 
-.topnavBlack a:hover{
+.topnavEQ a:hover{
     color: white;
 	text-shadow: 1px 1px 3px black;
 	transition: 0.2s;
 }
 
-.topnavBlack{
-    padding: 11px;
-    color:black;
-    position: absolute;
-    width: 100%;
-}
-
-/*------White Text Nav Bar---------*/
-@media screen and (max-width: 600px) {
-  .topnavEQ a:not(:first-child) {display: none;}
-  .topnavEQ a.icon {
-    float: right;
-    display: block;
-  }
-}
-
-@media screen and (max-width: 600px) {
-  .topnavEQ.responsive {position: relative;}
-  .topnavEQ.responsive a.icon {
-    position: absolute;
-    right: 0;
-    top: 0;
-    
-  }
-    
-  .topnavEQ{
-    text-align: left;    
-  }
-  .topnavEQ.responsive a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
-  .topnavEQ.responsive{
-    background-color: #463E3E;
-  }
-}
-
-.topnavWhite a{
-    color: black;
-    padding-top: 11px;
-    padding-right: 11px;
-    padding-left: 11px;
-    text-decoration: none;
-    transition: color 0.5s ease-in-out;
-}
-
-.topnavWhite .icon {
-    display: none;
-}
-
-.topnavWhite a:hover{
-    color: white;
-	text-shadow: 1px 1px 3px black;
-	transition: 0.2s;
-}
-
-.topnavWhite{
+.topnavEQ{
     padding: 11px;
     color:black;
     position: absolute;
@@ -359,9 +312,22 @@ input[type="text"]{
 	text-align: center;
 }
 
-.infoWeather{
+/* If the screen size is 601px wide or more, set the font-size of <div> to 80px */
+@media screen and (min-width: 601px) {
+  div.infoWeather {
+	text-align: left;
     padding-left: 300px;
 	float: left;
+  }
+}
+
+/* If the screen size is 600px wide or less, set the font-size of <div> to 30px */
+@media screen and (max-width: 600px) {
+   div.infoWeather {
+   text-align: left;
+   float: absolute;
+   padding-left: 30px;
+  }
 }
 
 .contentWeather{
@@ -369,6 +335,21 @@ input[type="text"]{
   padding-right: 20px;
   max-width: 800px;
   margin: auto;
+}
+
+#weatherMap {
+    height: 700px;
+    width: 700px;
+    max-width: 85%;
+    margin-left: 20px;
+    margin-right: 20px;
+    position: relative;
+    margin:auto;
+	padding: 2px 16px;
+	border-radius: 5px;
+	background-color: #EEEEEE;
+	box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+	border:5px solid #EEEEEE;
 }
 
 /*----------------UV Page CSS--------------*/
@@ -383,25 +364,97 @@ canvas{
 }
 
 /*----------------Authors Page CSS--------------*/
-.author_header img{
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  width: 100%;
+  border-radius: 5px;
+  background-color: white;
+}
+
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+img {
+  border-radius: 5px 5px 0 0;
+}
+
+.container {
+  max-width: 1335px;
+  margin: 0 auto;
+  padding: 2px 16px;
+}
+
+.grid-row {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: flex-start;
+}
+
+.grid-item {
+  height: 700px;
+  flex-basis: 33.33%;
+  -ms-flex: auto;
+  width: 259px;
+  position: relative;
+  padding: 10px;
+  box-sizing: border-box;
+}
+
+@media(max-width: 900px) {
+  .grid-item {
+    flex-basis: 50%;
+  }
+}
+
+@media(max-width: 500px) {
+  .grid-item {
+    flex-basis: 100%;
+  }
+}
+
+.fa {
+  padding: 20px;
+  font-size: 30px;
+  width: 30px;
+  text-align: center;
+  text-decoration: none;
+  margin: 5px 2px;
   border-radius: 50%;
-  height: 200px;
-  width: 200px;
-  display: inline-block;    
 }
 
-.authorCentre{
-    align-content: center;
-    padding-left: 20px;
-    padding-right: 20px;
-    margin: auto;
-    width: 68%;
-
+.fa:hover {
+    opacity: 0.7;
 }
 
-.centre{
+.fa-facebook {
+  background: #3B5998;
+  color: white;
+  text-align: center;
+}
+
+.fa-twitter {
+  background: #55ACEE;
+  color: white;
+}
+
+.socialMediaIcons {
+text-align: center;
+}
+
+pre {
+    background: #EEEEEE;
+    border: 1px solid #ddd;
+    border-left: 3px solid blue;
+    color: #666;
+    page-break-inside: avoid;
+    font-family: monospace;
+    font-size: 15px;
+    line-height: 1.6;
+    max-width: 100%;
+    overflow: auto;
     display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
+    word-wrap: break-word;
+	
 }
